--- a/src/main/resources/templates/productos/form.html
+++ b/src/main/resources/templates/productos/form.html
@@ -38,19 +38,23 @@
 	                <form th:action="@{/productos/guardar}" th:object="${producto}" method="post">
 	                    <input type="hidden" th:field="*{id}"/>
 	                    <div class="mb-3"><label class="form-label">Nombre</label><input type="text" th:field="*{nombre}" class="form-control"/></div>
+						<div class="mb-3"><label class="form-label">Descripción</label><input type="text" th:field="*{descripcion}" class="form-control"/></div>
 	                    <div class="mb-3"><label class="form-label">Precio</label><input type="number" step="0.01" th:field="*{precio}" class="form-control"/></div>
 	                    <div class="mb-3"><label class="form-label">Stock</label><input type="number" th:field="*{stock}" class="form-control"/></div>
+						<div class="mb-3"><label class="form-label">Stock mínimo</label><input type="number" th:field="*{stockMinimo}" class="form-control"/></div>
 						<div class="mb-3">
 						    <label class="form-label">Categoría</label>
 						    <select th:field="*{categoria.id}" class="form-select" required>
 						        <option value="">Seleccione una categoría</option>
 						        <option th:each="c : ${categorias}" th:value="${c.id}" th:text="${c.nombre}"></option>
 						    </select>
+							</div>
 	                    <button type="submit" class="btn btn-success">Guardar</button>
 	                    <a th:href="@{/productos}" class="btn btn-secondary">Volver</a>
 	                </form>
 	            </div></div>
 	        </section>
+			
 	    </main>
 	
 </div>
